# stm32f411-AI-demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  openocd.cfg  toolchain-arm-none-eabi.cmake
App/Drivers/: epd.c  epd.h  epd_font.h
App/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
App/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Libraries/: README.md
Libraries/Device/ST/STM32F4xx/Source/gcc/: startup_stm32f411xe.S  stm32f411xe_flash.ld
MDK/: project.uvprojx
MDK/DebugConfig/: project_STM32F411CEUx.dbgconf
cmake/: arm-none-eabi-gcc.cmake
